paginating live requests and adding branding logo
